--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 							<div class="split style1">
 								<section>
 									<form
-										  action="https://formspree.io/xjvkdlzg"
+										  action="https://formspree.io/f/xeqppkyr"
 									 method="POST"
 									>
 									<label>
