--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -224,7 +224,7 @@ Academically, I interned at an electrical distribution center and at a substatio
 																<div class="split style1">
 																	<section>
 																		<form
-																			  action="https://formspree.io/xjvkdlzg"
+																			  action="https://formspree.io/f/xeqppkyr"
 																			 method="POST"
 																		>
 																		<label>
