--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -182,7 +182,7 @@
 						<div class="split style1">
 							<section>
 								<form
-									  action="https://formspree.io/xjvkdlzg"
+									  action="https://formspree.io/f/xeqppkyr"
 									 method="POST"
 								>
 								<label>
