--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<header>
 								<h1><a href="index.html" id="logo">Welcome fellow human!!</a></h1>
 								<hr />
-								<p>Hope that you are doing great</p>
+								<p>Let Your Light Shine</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
