--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Welcome fellow human!!</a></h1>
+								<h1><a href="index.html" id="logo">Welcome!!</a></h1>
 								<hr />
 								<p>Let Your Light Shine</p>
 							</header>
